# NDLSearchShogaishi

./: README.md  main.py  ndl_json_parser.py  pyproject.toml  shogai_shi_anywhere.csv  shogai_shi_anywhere.json  shogai_shi_anywhere_simple.csv  unique_creator.py
