[tool.poetry]
name = "ndlsearch"
version = "0.1.0"
description = ""
authors = ["TomohiroHiratsuka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
xmltodict = "^0.13.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
